fixed layout bug

--- a/gio-nam-website/src/components/Pages/AboutPage/AboutPage.css
+++ b/gio-nam-website/src/components/Pages/AboutPage/AboutPage.css
@@ -9,6 +9,7 @@
     flex-direction: column;
     width: 100%;
     height: 100%;
+    background-color: aqua;
 }
 
 .aboutpage-hero-banner {
